--- a/pom.xml
+++ b/pom.xml
@@ -42,5 +42,10 @@
   		<artifactId>commonmark-ext-ins</artifactId>
   		<version>0.9.0</version>
   	</dependency>
+  	<dependency>
+	    <groupId>org.json</groupId>
+	    <artifactId>json</artifactId>
+	    <version>20180813</version>
+	</dependency>
   </dependencies>
 </project>
